<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/round_dialog__blue_color">
<TextView
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:textColor="@color/white"
    android:textSize="@dimen/text_size"
    android:text="@string/dialog_my_motto"
    android:gravity="center"/>
    <include
        layout="@layout/separate_white_line_1dp"/>
    <TextView
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dialog_modify_my_motto"
        android:textColor="@color/white"
        android:textSize="@dimen/content_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <EditText
            android:id="@+id/edt_modify_my_motto"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@null"
            android:gravity="top"
            android:padding="10dp"
            android:textColor="@color/my_background_color"
            android:textSize="@dimen/content_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_save_modify_motto"
            android:background="@drawable/add_white_border"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/btn_cancel_my_modify_motto"
            android:layout_marginLeft="20dp"
            android:background="@drawable/add_white_border"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</LinearLayout>