<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cdxy.schoolinforapplication.ui.my.ModifyMyPswActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_modify_my_psw">
    <include layout="@layout/view_title_my" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/my_psw"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edt_my_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_my_psw"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text=" 新   密   码："
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edt_new_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_new_psw"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/sure_new_psw"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edt_sure_new_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_sure_new_psw"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
</LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>
