<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/school"
    android:orientation="vertical"
    tools:context="com.cdxy.schoolinforapplication.ui.load.LoginActivity">

    <ProgressBar
    android:id="@+id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="账  号："
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edt_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_login_name"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="密  码："
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/add_border_light_color"
                android:onClick="onClick"
                android:text="@string/btn_login"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:background="@drawable/add_border_light_color"
                android:onClick="onClick"
                android:text="@string/btn_register"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
