<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cdxy.schoolinforapplication.ui.load.RegisterActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:id="@+id/activity_register">
      <include layout="@layout/view_title"/>
      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="昵       称："
                      android:gravity="center_vertical"/>
                  <EditText
                      android:id="@+id/edt_nickname"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:singleLine="true"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_register_nickname"
                      android:gravity="center_vertical"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="姓       名："
                      android:gravity="center_vertical"/>
                  <EditText
                      android:id="@+id/edt_realname"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:singleLine="true"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_register_realname"
                      android:gravity="center_vertical"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:id="@+id/ly_department"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text=" 所 在 系："
                      android:gravity="center_vertical"/>

                  <TextView
                      android:onClick="onClick"
                      android:clickable="true"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_department"
                      android:gravity="center_vertical"
                      android:id="@+id/txt_department" />

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:id="@+id/ly_class"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="班       级："
                      android:gravity="center_vertical"/>
                  <TextView
                      android:id="@+id/txt_class"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:background="@null"
                      android:clickable="true"
                      android:gravity="center_vertical"
                      android:hint="@string/hint_class"
                      android:onClick="onClick"
                      android:textColor="@color/text_color"
                      android:textSize="@dimen/content_text_size" />
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:id="@+id/ly_student_id"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="学       号："
                      android:gravity="center_vertical"/>
                  <EditText
                      android:id="@+id/edt_student_id"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:singleLine="true"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_student_id"
                      android:gravity="center_vertical"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="性       别："
                      android:gravity="center_vertical"/>
                  <RadioGroup
                      android:id="@+id/rg_sex"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:orientation="horizontal">
                      <RadioButton
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="match_parent"
                          android:id="@+id/girl"
                          android:text="女"
                          android:textSize="@dimen/content_text_size"
                          android:textColor="@color/text_color"
                          android:layout_marginLeft="20dp"/>
                      <RadioButton
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="match_parent"
                          android:id="@+id/boy"
                          android:text="男"
                          android:textColor="@color/text_color"
                          android:textSize="@dimen/content_text_size"/>
                  </RadioGroup>

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="*"
                      android:gravity="center_vertical"
                      android:paddingRight="5dp"
                      android:textColor="@color/backgroud_text_must_fill"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="出生年月："
                      android:gravity="center_vertical"/>

                  <TextView
                      android:onClick="onClick"
                      android:clickable="true"
                      android:id="@+id/txt_birthday"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_birthday"
                      android:gravity="center_vertical"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="民       族："
                      android:gravity="center_vertical"/>
                  <TextView
                      android:onClick="onClick"
                      android:clickable="true"
                      android:id="@+id/txt_nation"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_nation"
                      android:gravity="center_vertical"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="家庭住址："
                      android:gravity="center_vertical"/>
                  <EditText
                      android:id="@+id/edt_address"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:singleLine="true"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_address"
                      android:gravity="center_vertical"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textSize="@dimen/content_text_size"
                      android:textColor="@color/text_color"
                      android:text="兴趣爱好："
                      android:gravity="center_vertical"/>
                  <EditText
                      android:id="@+id/edt_hobby"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:background="@null"
                      android:textSize="@dimen/content_text_size"
                      android:singleLine="true"
                      android:textColor="@color/text_color"
                      android:hint="@string/hint_hobby"
                      android:gravity="center_vertical"/>
              </LinearLayout>
              <Button
                  android:onClick="onClick"
                  android:id="@+id/submit_register"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:background="@color/top_color"
                  android:textSize="@dimen/text_size"
                  android:textColor="@color/text_color"
                  android:text="@string/submit_register"
                  android:layout_margin="10dp"/>
          </LinearLayout>
      </ScrollView>
  </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>
